# rover_mapping_navigation

./: .gitignore  README  docker-compose.yaml  run.sh
nav2/: Dockerfile-nav2  build.sh
nav2/src/rover_nav2/: CMakeLists.txt  README.md  package.xml
nav2/src/rover_nav2/launch/: nav2_launch.py
nav2/src/rover_nav2/params/: nav2_params.yaml  qos_profile.yaml
nav2/src/rover_nav2/scripts/: cmd_vel_logger.py
rtabmap/: Dockerfile  Dockerfile-rtabmap  build.sh  entrypoint-camera.sh  entrypoint-rtabmap.sh  requirements.txt  ros1_entrypoint.sh
rtabmap/src/ros2_traversability_mapping/: CMakeLists.txt  README.md  package.xml
rtabmap/src/ros2_traversability_mapping/launch/: rtabmap_outdoors_localization.py  rtabmap_outdoors_mapping.launch.py  traversability_mapping.launch.py
rtabmap/src/ros2_traversability_mapping/scripts/: cam_imu_debug.py
rtabmap/src/ros2_traversability_mapping/src/: steepness_mapping_node.cpp
