<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_traversability_mapping</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lenovaki@todo.todo">lenovaki</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <depend>rclcpp</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>
</package>
